# Crypto-Vazima

./: .gitignore  Cargo.toml
dbs/: users.db  vacansions.db
src/: build_main.rs  login.rs  main.rs  register.rs  structs.rs  vacansies.rs
static/login/: login.html  login_error_email_required.html  login_error_hash_path.html  login_error_incorrect_password.html  login_error_invalid_email.html  login_error_user_not_found.html
static/main/: main_base.html  main_debug.html  main_end.html  main_err.html  зпас.html
static/register/: register.html  register_error_db.html  register_error_exists.html  register_error_hash.html  register_error_passwords.html  register_error_unknown.html
static/vacansion_add/: vacansion_add_form.html  vacansion_delete_form.html  vacansion_delete_form_error.html  vacansion_loading_error.html
