[package]
name = "rust"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.42.0", features = ["full"] }
chrono = "0.4.2"
serde = "1.0.172"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio-rustls"] }
dotenv = "0.15"
bcrypt = "0.17"
axum = { version = "0.8", features = ["macros"] }
serde_json = "1.0.145"
regex = "1.12.2"
tower = "0.4"
tower-http = { version = "0.5", features = ["fs"] }
